--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
+@import url("../nicolas2B-programacao/style/header.css");
+
+.cabecalho_menu-hamburguer{
+    width: 24px;
+    height: 24px;
+    background-image:url ("../img/menu.svg")'';
+    display: inline-block;
+           }
+   
 :root{
     --cor-de-fundo: #EBECEE;
-
+    --branco: #FFFFFF;
 }
-
 body{
-    background-color: var(--cor-de-fundo);
-
-}
-h1{
-    background-color: white;
+    background-color: var(--branco);
 }
