--- a/style/header.css
+++ b/style/header.css
@@ -12,6 +12,7 @@ background-color: var(--branco);
 display: flex;
 justify-content: space-between;
 align-items: center;
+ position: 
 }
 .container{
 
@@ -22,3 +23,10 @@ display: flex;
    padding:1em;
 
  }
+
+ lista-menu { 
+ display:none;
+ } 
+
+ .container__botao :checked-.lista-menu {
+ display:block;}
