--- a/style.css
+++ b/style.css
@@ -1,16 +1,17 @@
-@import url("../nicolas2B-programacao/style/header.css");
+@import url("style/header.css");
 
-.cabecalho_menu-hamburguer{
-    width: 24px;
-    height: 24px;
-    background-image:url ("../img/menu.svg")'';
-    display: inline-block;
-           }
-   
 :root{
     --cor-de-fundo: #EBECEE;
-    --branco: #FFFFFF;
+    --branco: #ffffff;
+    --laranja: #EB9B00;
+    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+    --fonte-principal: "Poppins";
 }
 body{
-    background-color: var(--branco);
+
+    background-color: var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
+    
 }
