--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 @import url("style/header.css");
+@import url("style/banner.css");
 
 :root{
     --cor-de-fundo: #EBECEE;
     --branco: #ffffff;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --fonte-principal: "Poppins";
+    --font-principal: 'Poppins';
 }
 body{
     background-color: var(--cor-de-fundo);
-    font-family: var(--fonte-principal);
+    font-family: var(--font-principal);
     font-size: 16px;
-    font-weight: 400px;
+    font-weight: 400;
 }
