--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@
 @import url("style/banner.css");
 
 :root{
-    --cor-de-fundo: #EBECEE;
-    --branco: #ffffff;
-    --laranja: #EB9B00;
-    --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --font-principal: 'Poppins';
+    --cor-de-fundo: #640318;
+    --branco: #e90c0c;
+    --laranja: #31032b;
+    --azul-degrade: linear-gradient(97.54deg, #000000 35.49%, #000000 165.37%);
+    --fonte-principal: "Poppins";
 }
 body{
     background-color: var(--cor-de-fundo);
-    font-family: var(--font-principal);
+    font-family: var(--fonte-principal);
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 400px;
 }
