--- a/style/header.css
+++ b/style/header.css
@@ -1,4 +1,3 @@
-
 .cabecalho__menu-hamburguer{
     width: 24px;
     height: 24px;
@@ -45,6 +44,7 @@
 
 .lista__menu-titulo {
     color: var(--laranja);
+    font-weight: 700;
 }
 
 
@@ -55,6 +55,7 @@
   background-clip: text;
   text-transform: uppercase;
 }
+
 .container__botao {
- display: none;
+    display: none;
 }
